--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url={{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}" />      
-        <link rel="canonical" href="{{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}" />                    
+        <meta http-equiv="refresh" content="0;url=https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/" />      
+        <link rel="canonical" href="https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/" />                    
     </head>                                                                                                                                                                  
     <body>                                                                      
         <h1>                                                                    
-            The page been moved to <a href="{{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}">{{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}</a>
+            The page been moved to <a href="{{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}">a new location</a>
         </h1>                                                                  
     </body>                                                                    
 </html>
