--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>                                                                                                                                                                  
     <body>                                                                      
         <h1>                                                                    
-            The page been moved to <a href="{{https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/}}">a new location</a>
+            The page been moved to <a href="https://mipt.ru/science/labs/laboratoriya-nanobiotekhnologiy/">a new location</a>
         </h1>                                                                  
     </body>                                                                    
 </html>
